<resources>
    <string name="app_name">Pinky Robot Dance !</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_dance" translatable="false">Dance</string>
    <string name="Up">Go up !</string>
    <string name="Down">Go down !</string>
    <string name="Middle">Stay in the middle !</string>
    <string name="Resume">Pause the music</string>
    <string name="Restart">Restart the music</string>

    <string name="english" translatable="false">en</string>
    <string name="french" translatable="false">fr</string>
    <string name="NoSpanish" translatable="false">No está en el menú. Elige otra comida por favor !</string>
    <string name="NoGerman" translatable="false">Es steht nicht auf der Speisekarte. Wählen Sie ein anderes Gericht !</string>
    <string name="selectProfilePicture">You need to choose a profile picture!</string>
    <string name="uploadPictureFailed">Failed uploading photo</string>
    <string name="registrationSuccessful">Registration successful</string>
    <string name="registrationFailed">Registration failed. Please try again later.</string>
    <string name="selectPicture">Select a picture</string>
    <string name="welcome">Welcome :\u0020</string>
    <string name="createProfile">.   Please, create your profile</string>
    <string name="appWelcome">Welcome to Just Dance !</string>
    <string name="enterUsername">Who are you ?</string>
    <string name="launchApp">Let\'s Dance !</string>
    <string name="user_profile_image" translatable="false">user_profile_image</string>
    <string name="enter_username">Enter username</string>
    <string name="chooseLanguage">Make an existential choice</string>
    <string name="englishChoice" translatable="false">Tea and marmite</string>
    <string name="frenchChoice" translatable="false">Fromage et baguette</string>
    <string name="germanChoice" translatable="false">Wurst und Kartoffeln</string>
    <string name="spanishChoice" translatable="false">Tapas y paella</string>
    <string name="nameEmpty">You must enter your name to play</string>
    <string name="noSelectedLanguages">You should eat something !</string>
    <string name="edit_button" translatable="false">edit_Button</string>
    <string name="do_not_edit_button" translatable="false">do_Not_Edit_Button</string>
    <string name="attribute_picture" translatable="false">attribute_picture</string>
    <string name="hallOfFame">Hall of fame</string>
    <string name="dance_again">Dance again !</string>
    <string name="see_profile">Go to Hall Of Fame</string>
    <string name="level">You are a</string>
    <string name="dance">Dance</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_user">Change user</string>
    <string name="my_profile">Halls of Fame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_points">Number of points</string>
    <string name="level_user_dance">Level</string>
    <string name="fr" translatable="false">fr</string>
    <string name="start_dance">Start dance !</string>
    <string name="QuitOrResumeText">Do you want to quit the party or to resume ? If you quit, you will lose your score</string>
    <string name="TitleQuitOrPause">Pause on the game</string>
    <string name="IdQuitOrPause" translatable="false">pauseDance</string>
    <string name="ButtonQuit">Quit</string>
    <string name="ButtonResume">Resume</string>
    <string name="Yes">Yes</string>
    <string name="NoChangeUserPopUp">Good choice</string>
    <string name="No">No</string>
    <string name="ChangeOfDancerTitle">Change of dancer</string>
    <string name="YesChangeUserPopUp">OK ! See you later</string>
    <string name="QuestionChangeUser">Do you really want to change user ?</string>
    <string name="easy_land">Easy:</string>
    <string name="medium_land">Medium:</string>
    <string name="hard_land">Hard:</string>
    <string name="select_a_song">Select a song !</string>
    <string name="medium">** Medium **</string>
    <string name="hard">*** Hard ***</string>
    <string name="easy">* Easy *</string>
    <string name="title_activity_test_sensors" translatable="false">testSensors</string>
    <string name="internet_connection_message">Please check your internet connection!</string>
    <string name="internet_connection_title">Internet connection</string>
    <string name="error_message_music_selected">You need to choose a music first!</string>
    <string name="wrong_name">Was it the wrong name ?</string>
    <string name="save_change">Don\'t you want to save any change ?</string>
    <string name="no_saving">No saving</string>
    <string name="quit_without_save">Are you sure you want to quit without saving ?</string>
    <string name="HerculeName">Hercule - From Zero to Hero</string>
    <string name="LalalandName">La La Land - Another Day of Sun</string>
    <string name="ShakiraName">Shakira - Chantaje</string>
    <string name="FrogPrincessName">The Princess Frog - Digging</string>
    <string name="musicalinette" translatable="false">Musicalinette</string>
    <string name="yourScore">Your scores on this song are listed below</string>
    <string name="error_message_bluetooth">Please enable your bluetooth and pair your watch!</string>
    <string name="error_message_pair_watch">Please pair this device with your watch</string>
    <string name="good" translatable="false">GOOD !</string>
    <string name="ok" translatable="false">OK !</string>
    <string name="point_sent1">You obtained</string>
    <string name="point_sent2">points</string>
    <string name="user">Player :</string>
    <string name="score">Score :</string>
    <string name="players">Players</string>
    <string name="points">Points</string>
    <string name="creusetitle">Princess Frog - Dig</string>
    <string name="musicalinettetitle">Short music</string>
</resources>
